Save my latest website changes

--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
                     <div class="contact-form-container">
                         <h3>Get In Touch</h3>
                         <p class="form-subtitle">Send me a message and I'll get back to you soon</p>
-                        <form action="https://formsubmit.co/alanayalag@gmail.com" method="POST">
-                            <input type="hidden" name="_next" value="thank_you.html">
+                        <form action="https://formsubmit.co/022ddef8665570354508fb37aea6ab8f" method="POST">
+                            <input type="hidden" name="_next" value="https://alan-ayala-website.vercel.app/thank_you.html">
                             <input type="hidden" name="_captcha" value="true">
                             <input type="hidden" name="_subject" value="New Contact Form Submission!">
                             <div class="form-group">
