--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,8 @@
                         <p class="form-subtitle">Send me a message and I'll get back to you soon</p>
                         <form action="https://formsubmit.co/022ddef8665570354508fb37aea6ab8f" method="POST">
                             <input type="hidden" name="_next" value="https://alan-ayala-website.vercel.app/thank_you.html">
-                            <input type="hidden" name="_captcha" value="true">
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_template" value="table">
                             <input type="hidden" name="_subject" value="New Contact Form Submission!">
                             <div class="form-group">
                                 <label for="name">Your Name</label>
