fix to the thank_you page and script

--- a/thank_you.html
+++ b/thank_you.html
@@ -59,7 +59,7 @@
                             <footer class="contact-quote-footer">— Steve Jobs</footer>
                         </blockquote>
                     </div>
-                    <div class="contact-form-container">
+                    <div class="contact-form-container" tabindex="-1" id="thankyou-message">
                         <h3>✅ Thank You!</h3>
                         <p class="form-subtitle">Your message has been successfully sent.</p>
                         <p class="form-subtitle">I'll respond as soon as I can.</p>
