change photo from projects section in index

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                             <div class="gallery-card">
-                                <img src="assets/ai-driven.png" alt="ai-driven.">
+                                <img src="assets/self-taught-journey.png" alt="ai-driven.">
                                 <div class="card-overlay">
                                     <h4 class="card-title">AI-Driven Automation Initiative</h4>
                                     <p class="card-description">Created and implemented AI agents using OpenAI API and LangChain for automated task management and business process optimization.</p>
