--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                         <h3>Projects</h3>
                         <div class="gallery-container">
                             <div class="gallery-card">
-                                <img src="assets/self-taught-journey.png" alt="Description of Project 3">
+                                <img src="ai-driven" alt="ai-driven.">
                                 <div class="card-overlay">
-                                    <h4 class="card-title">Self-Taught Development Journey</h4>
-                                    <p class="card-description">Self-taught journey achieving professional-grade proficiency in multiple programming languages through disciplined independent study.</p>
-                                    <p class="card-description">Mastered diverse technological tools and frameworks through hands-on project development and continuous learning.</p>
-                                    <p class="card-description">Developed comprehensive GitHub showcasing evolution from beginner to advanced full-stack capabilities.</p>
+                                    <h4 class="card-title">AI-Driven Automation Initiative</h4>
+                                    <p class="card-description">Created and implemented AI agents using OpenAI API and LangChain for automated task management and business process optimization.</p>
+                                    <p class="card-description">Ready to design and deploy custom AI agents that streamline your business operations, whether for lead generation, customer support, or process automation.</p>
+                                    <p class="card-description">Currently exploring AI agent development for business venture planning as part of Tetr College curriculum.</p>
                                 </div>
                             </div>
                             <div class="gallery-card">
@@ -72,12 +72,12 @@
                                 </div>
                             </div>
                             <div class="gallery-card">
-                                <img src="assets/self-taught-journey.png" alt="ai-driven.">
+                                <img src="assets/ai-driven.png" alt="ai-driven">
                                 <div class="card-overlay">
-                                    <h4 class="card-title">AI-Driven Automation Initiative</h4>
-                                    <p class="card-description">Created and implemented AI agents using OpenAI API and LangChain for automated task management and business process optimization.</p>
-                                    <p class="card-description">Ready to design and deploy custom AI agents that streamline your business operations, whether for lead generation, customer support, or process automation.</p>
-                                    <p class="card-description">Currently exploring AI agent development for business venture planning as part of Tetr College curriculum.</p>
+                                    <h4 class="card-title">Self-Taught Development Journey</h4>
+                                    <p class="card-description">Self-taught journey achieving professional-grade proficiency in multiple programming languages through disciplined independent study.</p>
+                                    <p class="card-description">Mastered diverse technological tools and frameworks through hands-on project development and continuous learning.</p>
+                                    <p class="card-description">Developed comprehensive GitHub showcasing evolution from beginner to advanced full-stack capabilities.</p>
                                 </div>
                             </div>
                         </div>
