--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h3>Projects</h3>
                         <div class="gallery-container">
                             <div class="gallery-card">
-                                <img src="ai-driven" alt="ai-driven.">
+                                <img src="assets/ai-driven.png" alt="ai-driven.">
                                 <div class="card-overlay">
                                     <h4 class="card-title">AI-Driven Automation Initiative</h4>
                                     <p class="card-description">Created and implemented AI agents using OpenAI API and LangChain for automated task management and business process optimization.</p>
