--- a/contact.html
+++ b/contact.html
@@ -63,14 +63,14 @@
                         <h3>Get In Touch</h3>
                         <p class="form-subtitle">Send me a message and I'll get back to you soon!</p>
                         <form action="https://formsubmit.co/022ddef8665570354508fb37aea6ab8f" method="POST">
-                            <input autofocus type="hidden" name="_next" value="https://alan-ayala-website.vercel.app/thank_you.html">
+                            <input type="hidden" name="_next" value="https://alan-ayala-website.vercel.app/thank_you.html">
                             <input type="hidden" name="_webhook" value="https://notion-forms-agent.onrender.com/webhook">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_template" value="table">
                             <input type="hidden" name="_subject" value="New Contact Form Submission!">
                             <div class="form-group">
                                 <label for="name">Your Name</label>
-                                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                                <input autofocus type="text" id="name" name="name" placeholder="Your Name" required>
                             </div>
                             <div class="form-group">
                                 <label for="email">Your Email</label>
