--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="mobile-instruction container">
                 <div class="instruction-content">
                     <p class="instruction-text">
-                        <span class="finger-tap">👆</span>
+                        <span class="finger-tap">👇</span>
                         Tap the photos to discover my journey
                     </p>
                     <p class="instruction-subtext">Each image reveals detailed information about my experiences</p>
@@ -72,7 +72,7 @@
                                 </div>
                             </div>
                             <div class="gallery-card">
-                                <img src="assets/ai-driven.png" alt="ai-driven">
+                                <img src="assets/self-taught.png" alt="Self-taught">
                                 <div class="card-overlay">
                                     <h4 class="card-title">Self-Taught Development Journey</h4>
                                     <p class="card-description">Self-taught journey achieving professional-grade proficiency in multiple programming languages through disciplined independent study.</p>
